# docs/swagger.yaml
@@ -1,18 +1,4 @@
 definitions:
-  handlers.BookTransactionRequest:
-    properties:
-      book_id:
-        items:
-          type: integer
-        type: array
-      member_id:
-        type: string
-    type: object
-  handlers.ErrorResponse:
-    properties:
-      error:
-        type: string
-    type: object
   handlers.Message:
     properties:
       message:
@@ -31,6 +17,85 @@ definitions:
       title:
         type: string
     type: object
+  models.BookRequest:
+    properties:
+      author:
+        type: string
+      category:
+        type: string
+      count:
+        type: integer
+      title:
+        type: string
+    type: object
+  models.BookReturnTransactionResponse:
+    properties:
+      books:
+        items:
+          properties:
+            bookID:
+              type: integer
+            borrowdate:
+              type: string
+            dueDate:
+              type: string
+            errorMessage:
+              type: string
+            penalty:
+              type: integer
+            returned_Date:
+              type: string
+            title:
+              type: string
+          type: object
+        type: array
+      member:
+        properties:
+          memberID:
+            type: string
+          name:
+            type: string
+        type: object
+    type: object
+  models.BookTransactionRequest:
+    properties:
+      book_id:
+        items:
+          type: integer
+        type: array
+      member_id:
+        type: string
+    type: object
+  models.BookTransactionResponse:
+    properties:
+      books:
+        items:
+          properties:
+            bookID:
+              type: integer
+            borrowdate:
+              type: string
+            dueDate:
+              type: string
+            errorMessage:
+              type: string
+            title:
+              type: string
+          type: object
+        type: array
+      member:
+        properties:
+          memberID:
+            type: string
+          name:
+            type: string
+        type: object
+    type: object
+  models.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
   models.Member:
     properties:
       date:
@@ -44,19 +109,13 @@ definitions:
       phone:
         type: string
     type: object
-  models.Transaction:
+  models.MemberRequest:
     properties:
-      book:
-        $ref: '#/definitions/models.Book'
-      borrow_date:
+      email:
         type: string
-      borrow_id:
-        type: integer
-      due_date:
+      name:
         type: string
-      member:
-        $ref: '#/definitions/models.Member'
-      return_date:
+      phone:
         type: string
     type: object
 info:
@@ -92,7 +151,7 @@ paths:
         "400":
           description: error message
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Filters books
       tags:
       - Books
@@ -106,7 +165,7 @@ paths:
         name: book
         required: true
         schema:
-          $ref: '#/definitions/models.Book'
+          $ref: '#/definitions/models.BookRequest'
       produces:
       - application/json
       responses:
@@ -115,11 +174,9 @@ paths:
           schema:
             $ref: '#/definitions/models.Book'
         "400":
-          description: '{"error": "error message"}'
+          description: error message
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Creates a new Book
       tags:
       - Books
@@ -140,7 +197,7 @@ paths:
         "500":
           description: Error message
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: To Delete Book
       tags:
       - Books
@@ -151,23 +208,23 @@ paths:
       description: Creates a new Book Transaction, member_id and book_id should be
         passed in JSON.
       parameters:
-      - description: Book details
+      - description: Request for bookTransaction
         in: body
         name: book
         required: true
         schema:
-          $ref: '#/definitions/handlers.BookTransactionRequest'
+          $ref: '#/definitions/models.BookTransactionRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Book-Transaction details
           schema:
-            $ref: '#/definitions/models.Transaction'
+            $ref: '#/definitions/models.BookTransactionResponse'
         "400":
           description: error message
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Creates a new Book Transaction
       tags:
       - Book-Transactions
@@ -193,7 +250,7 @@ paths:
         "400":
           description: error message
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Gets list of all books borrowed By member
       tags:
       - Book-Transactions
@@ -214,13 +271,13 @@ paths:
         type: string
       responses:
         "200":
-          description: Deleted successfully
+          description: success message
           schema:
             $ref: '#/definitions/handlers.Message'
         "500":
           description: error message
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: To delete a Member
       tags:
       - members
@@ -228,14 +285,14 @@ paths:
       consumes:
       - application/json
       description: Creates a new member, details should be passed in JSON. name and
-        phone number is necessary
+        phone number is mandatory
       parameters:
       - description: Member details
         in: body
         name: member
         required: true
         schema:
-          $ref: '#/definitions/models.Member'
+          $ref: '#/definitions/models.MemberRequest'
       produces:
       - application/json
       responses:
@@ -246,7 +303,7 @@ paths:
         "400":
           description: error message
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Creates a new Member
       tags:
       - members
@@ -267,8 +324,35 @@ paths:
         "500":
           description: error message
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Get Member by Member ID
       tags:
       - members
+  /return:
+    patch:
+      consumes:
+      - application/json
+      description: Updates the book-transaction, returned_date and penalty is populated
+        in the system, member_id and book_id should be passed in JSON.
+      parameters:
+      - description: Request for  returnbook
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/models.BookTransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: details of ReturnedBooks
+          schema:
+            $ref: '#/definitions/models.BookReturnTransactionResponse'
+        "400":
+          description: error message
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Updates the Book-transaction
+      tags:
+      - Book-Transactions
 swagger: "2.0"
